# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "protobuf", version = "32.1")
bazel_dep(name = "grpc", version = "1.74.1")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "boringssl", version = "0.20250514.0")
bazel_dep(name = "folly", version = "2025.01.13.00.bcr.3")

deps = use_extension("//:deps.bzl", "deps_extension")
use_repo(deps, "farmhash")
use_repo(deps, "libibverbs")
use_repo(deps, "libnuma")
